feat: Refactor product category model and migration
- Updated the Category model to specify the table name as 'product_categories'.
- Deleted the Stock model as it is no longer needed.
- Added a new migration to create the 'product_categories' table with necessary fields.
- Introduced enums for resource groups to improve code organization.
- Added configuration files for Spatie roles and permissions.
- Created seeders for roles and permissions to initialize the database with default values.
- Enhanced the User model to include role management using Spatie's package.
- Updated the AppServiceProvider to configure Filament form components for translation.
- Added Hungarian translations for various application strings.

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -17,5 +17,94 @@
     "Regards,": "Üdvözlettel,",
     "Whoops!": "Hoppá!",
     "Hello!": "Helló!",
-    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below into your web browser:": "Ha nem tud az \":actionText\" gombra kattintani, másolja be az alábbi URL-t a böngészőjébe:"
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below into your web browser:": "Ha nem tud az \":actionText\" gombra kattintani, másolja be az alábbi URL-t a böngészőjébe:",
+    "User": "Felhasználó",
+    "Payment method": "Fizetési mód",
+    "Payment method title": "Fizetési mód címe",
+    "Bank Transfer": "Banki átutalás",
+    "Set paid": "Fizetett",
+    "Billing name": "Számlázási név",
+    "Billing address 1": "Számlázási cím 1",
+    "Billing address 2": "Számlázási cím 2",
+    "Billing city": "Számlázási város",
+    "Billing state": "Számlázási megye",
+    "Billing postcode": "Számlázási irányítószám",
+    "Billing country": "Számlázási ország",
+    "Billing email": "Számlázási email",
+    "Billing phone": "Számlázási telefon",
+    "Billing vat number": "Számlázási adószám",
+    "Billing company name": "Számlázási cég neve",
+    "Billing company office": "Számlázási cég telephelye",
+    "Shipping name": "Szállítási név",
+    "Shipping address 1": "Szállítási cím 1",
+    "Shipping address 2": "Szállítási cím 2",
+    "Shipping city": "Szállítási város",
+    "Shipping state": "Szállítási megye",
+    "Shipping postcode": "Szállítási irányítószám",
+    "Shipping country": "Szállítási ország",
+    "Shipping method id": "Szállítási mód azonosító",
+    "Válassz ki egy elemet": "Válassz ki egy elemet",
+    "Order key": "Rendelési kulcs",
+    "Order status": "Rendelés állapota",
+    "PENDING": "Függőben",
+    "Order currency": "Rendelés pénzneme",
+    "Shipping cost": "Szállítási költség",
+    "Billing first name": "Számlázási keresztnév",
+    "Billing last name": "Számlázási vezetéknév",
+    "Shipping first name": "Szállítási keresztnév",
+    "Shipping last name": "Szállítási vezetéknév",
+    "Shipping tracking number": "Szállítási nyomkövetési szám",
+    "Shipping lines method id": "Szállítási sorok mód azonosító",
+    "Shipping lines method title": "Szállítási sorok mód címe",
+    "Shipping lines total": "Szállítási sorok összesen",
+    "Orders": "Rendelések",
+    "Products": "Termékek",
+    "Users": "Felhasználók",
+    "Manufacturer": "Gyártó",
+    "Ean": "Ean",
+    "Sku": "Sku",
+    "Factory code": "Gyári kód",
+    "Item name": "Termék neve",
+    "Width": "Szélesség",
+    "Aspect ratio": "Oldalarány",
+    "Structure": "Szerkezet",
+    "Diameter": "Átmérő",
+    "Li": "Terhelési index",
+    "Si": "Sebesség index",
+    "Bolt count": "Csavarok száma",
+    "Center bore": "Középfurat",
+    "Pcd": "Osztókör",
+    "Et": "ET érték",
+    "Consumption": "Fogyasztás",
+    "Grip": "Tapadás",
+    "Noise level": "Zajszint",
+    "Noise value": "Zaj érték",
+    "Weight": "Súly",
+    "Season": "Szezon",
+    "Usage": "Felhasználás",
+    "Main image": "Fő kép",
+    "Min order quantity": "Minimális rendelési mennyiség",
+    "Pattern name": "Mintázat neve",
+    "Secondary image": "Másodlagos kép",
+    "Secondary pattern name": "Másodlagos mintázat neve",
+    "Item type name": "Terméktípus neve",
+    "Rim model": "Felni modell",
+    "Rim color": "Felni szín",
+    "For winter": "Télihez",
+    "Rim structure": "Felni szerkezet",
+    "Rim dedicated": "Dedikált felni",
+    "Reinforced": "Erősített",
+    "Runflat": "Runflat",
+    "Tire spec data": "Gumi specifikációs adatok",
+    "Tire car data": "Gumi autó adatok",
+    "Url": "Url",
+    "Retail price eur": "Kiskereskedelmi ár (eur)",
+    "Wholesale price eur": "Nagykereskedelmi ár (eur)",
+    "Shipping": "Szállítás",
+    "Name": "Név",
+    "News": "Hírek",
+    "Blog": "Blog",
+    "Title": "Cím",
+    "Slug": "Slug",
+    "Cost": "Költség"
 }
