feat: Enhance product importer with image download functionality and update blog resource with rich editor

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -106,5 +106,24 @@
     "Blog": "Blog",
     "Title": "Cím",
     "Slug": "Slug",
-    "Cost": "Költség"
+    "Cost": "Költség",
+    "Link": "Link",
+    "Featured media": "Kiemelt média",
+    "Author": "Szerző",
+    "Comment status": "Hozzászólás állapota",
+    "Ping status": "Ping állapota",
+    "Sticky": "Ragadós",
+    "Format": "Formátum",
+    "Status": "Állapot",
+    "Type": "Típus",
+    "Date": "Dátum",
+    "Date gmt": "Dátum (GMT)",
+    "Modified": "Módosítva",
+    "Modified gmt": "Módosítva (GMT)",
+    "Template": "Sablon",
+    "Guid": "GUID",
+    "Meta": "Meta",
+    "Categories": "Kategóriák",
+    "Tags": "Címkék",
+    "Yoast head": "Yoast fej"
 }
