feat: Add net wholesale and retail price translations to Hungarian language file

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -125,5 +125,7 @@
     "Meta": "Meta",
     "Categories": "Kategóriák",
     "Tags": "Címkék",
-    "Yoast head": "Yoast fej"
+    "Yoast head": "Yoast fej",
+    "Net wholesale price": "Nettó nagykereskedelmi ár",
+    "Net retail price": "Nettó kiskereskedelmi ár"
 }
